# lucerna

./: .gitignore  .lintstagedrc.mjs  CLAUDE.md  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/ai/: system_prompt.py  tools.py
backend/app/api/: chat.py  demo.py  email.py  feedback.py  optimize.py  tax_config.py
backend/app/engine/: aca.py  constants.py  curve_strategy.py  demo.py  dp.py  heuristic.py  irmaa.py  optimizer.py  rmd.py  state_tax.py  tax.py  tax_cost.py  trace.py  types.py
backend/benchmarks/: bench_optimizer.py
backend/data/: rmd_tables.json  tax_brackets_2025.json  tax_brackets_2026.json
backend/scripts/: investigate_optimizer_divergence.py  update_data.py  update_state_tax_data.py
backend/tests/: conftest.py
backend/tests/ai/: test_system_prompt.py  test_tools.py
backend/tests/api/: test_chat.py  test_demo_api.py  test_email.py  test_feedback.py  test_health.py  test_optimize.py  test_optimize_validation.py  test_tax_config.py
backend/tests/engine/: test_aca.py  test_curve_strategy.py  test_demo.py  test_dp.py  test_heuristic.py  test_irmaa.py  test_optimizer.py  test_rmd.py  test_state_tax.py  test_tax.py  test_tax_cost.py  test_trace.py
backend/tests/scripts/: test_generate_frontend_tax_data.py  test_update_data.py  test_update_state_tax_data.py
docs/: design-aesthetic.md  scheduled-task-ux-review-prompt.md  tax-data-update.md
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: .env.example  .prettierignore  (+6 more)
(+143 files in other folders)
